changed a few paths to work locally

--- a/src/debate_arena.ipynb
+++ b/src/debate_arena.ipynb
@@ -4,16 +4,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/conda/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from transformers import AutoTokenizer, AutoModelForCausalLM, pipeline\n",
     "import torch\n",
@@ -48,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +55,8 @@
     "    \n",
     "    @staticmethod\n",
     "    def get_config(model_type: ModelType, bias: str) -> 'ModelConfig':\n",
-    "        base_path = \"/app/models\"\n",
+    "        #base_path = \"/app/models\"\n",
+    "        base_path = r\"C:\\Users\\isaac\\dev\\LLM_Model_Bias\\src\\models\"\n",
     "        \n",
     "        if model_type == ModelType.PHI:\n",
     "            return ModelConfig(\n",
@@ -91,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -441,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -471,7 +463,7 @@
     "    )\n",
     "    \n",
     "    arena.conduct_debate(topic, prompt)\n",
-    "    arena.save_debate()\n",
+    "    arena.save_debate(output_dir=r\"C:\\Users\\isaac\\dev\\LLM_Model_Bias\\src\\debate_results\")\n",
     "    \n",
     "    return arena"
    ]
@@ -724,7 +716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -739,11 +731,260 @@
     "#     max_turns=3\n",
     "# )"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tokenizers loaded successfully!\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "                <h3>Debate on: Climate Change</h3>\n",
+       "                <p><strong>Initial Prompt:</strong> Is climate change a major issue? If so, how can we address it?</p>\n",
+       "                <p><strong>Models:</strong> Llama-left vs Llama-right</p>\n",
+       "                <p><strong>Max tokens per response:</strong> 150</p>\n",
+       "                <p><strong>History window:</strong> 2 turns</p>\n",
+       "            "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<h4>Turn 1/3</h4>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading Llama-left model...\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<p><strong>Llama-left:</strong> Do you agree with his assessment of Trump’s response and what he said about science? How do scientists respond when their message is not taken seriously by people who make policy decisions that affect them directly or indirectly (e.g. students)? Are there ways for us as individuals to be more aware of these issues but still feel powerless against those making decisions at large scales? What other things would help reduce our sense of powerlessness while also having an impact on decision-making processes within institutions?\n",
+       "I think this topic could definitely have some interesting responses depending upon your stance. I’m personally sympathetic towards policies which try to curb greenhouse gas emissions from transportation sources such as cars, trucks etc.</p>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading Llama-right model...\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<p><strong>Llama-right:</strong> The US will need to come up with comprehensive plans to deal with climate change if they want to compete internationally. This means investing heavily in renewable energy production and infrastructure development. But President Obama has already been criticized for being too slow to act, and many economists fear that putting off action until after 2016 elections may result in higher costs later down the road. On top of all that, environmentalists worry that Trump’s administration might roll back any progress made under Obama. So far, though, Trump has shown little interest in reversing anything good Obama did during his presidency — except maybe tax breaks for billionaires. Even before becoming president, however, Trump seemed interested only in cutting taxes rather than creating jobs.</p>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<h4>Turn 2/3</h4>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading Llama-left model...\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<p><strong>Llama-left:</strong> The Llama-Left responds:\n",
+       "To me, it seems like both sides are right. He doesn’t seem willing to spend money now because he thinks there won’t be enough economic benefit years from then; she says he does put spending on renewables ahead even though no one knows whether its worthwhile yet. Both reasons sound valid. One way to handle this situation might be to recognize that sometimes we get caught between two competing demands without knowing exactly where each should go. For example, taking care of kids often requires getting out into traffic, whereas teaching classes online usually allows time for that activity. In situations like this, my recommendation is to look around yourself and see what others’ priorities appear to be based on what actually happens.</p>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading Llama-right model...\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<p><strong>Llama-right:</strong> Can you agree or disagree with them? Do you know more about these issues? Does something else pop into mind while reading our latest post? Let us know by commenting below!\n",
+       "Tags: environment politics world news United States Donald Trump Hillary Clinton global warming climate change Republicans Democrats green technology pollution carbon dioxide fossil fuels environment war government budget national security international relations foreign policy immigration gun control abortion universal healthcare Supreme Court guns terrorism LGBT equality women's rights health care economy debt crisis austerity inequality income gap racism sexism class struggle education gender pay gap feminism white nationalism populism transgender LGBTQ culture wars sex slavery immigrant criminal justice crime migrant children border wall illegal immigrants undocumented migrants drug cartels sexual assault sanctuary cities fake news false news alternative facts impeachment Russia collusion Ukraine election 2020 coronavirus China Xi Jinping</p>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<h4>Turn 3/3</h4>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading Llama-left model...\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<p><strong>Llama-left:</strong> Did they make sense? Would your take on any part differ? What do you think about their responses overall?\n",
+       "What’s next after “The New York Times” reports on the U.S.</p>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading Llama-right model...\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<p><strong>Llama-right:</strong> Do you have an opinion about what is going to happen now that The New York Time s reported its investigation of President Donald Trump and his family. Will there be legal consequences for him and his supporters if he doesn’t cooperate willingly? Or will Trump try to fight back as aggressively as possible? And should this lead to some kind of de-funding of federal agencies like the Justice Department, which could result in law enforcement officials being less willing than ever before to work with the administration when enforcing laws against crimes such as obstruction of justice, bribery, fraud and espionage? These are all questions left unanswered by The New Yor kTime s report, but here at Llama.</p>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Debate saved to: C:\\Users\\isaac\\dev\\LLM_Model_Bias\\src\\debate_results\\climate_change_debate_20241203_163753.json\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 3. Llama Left vs Llama Right\n",
+    "llama_arena = run_debate(\n",
+    "    topic=\"Climate Change\",\n",
+    "    prompt=\"Is climate change a major issue? If so, how can we address it?\",\n",
+    "    model1_type=ModelType.LLAMA,\n",
+    "    model1_bias=\"left\",\n",
+    "    model2_type=ModelType.LLAMA,\n",
+    "    model2_bias=\"right\",\n",
+    "    max_turns=3\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <h3>Debate Summary</h3>\n",
+       "        <p><strong>Topic:</strong> Climate Change</p>\n",
+       "        <p><strong>Initial Prompt:</strong> Is climate change a major issue? If so, how can we address it?</p>\n",
+       "        <p><strong>Models:</strong> Llama-left vs Llama-right</p>\n",
+       "        <p><strong>Number of Turns:</strong> 3</p>\n",
+       "        <p><strong>Temperature:</strong> 0.7</p>\n",
+       "        <p><strong>Timestamp:</strong> 2024-12-03T16:37:27.891462</p>\n",
+       "        <h3>Response Statistics</h3><table><tr><th>Model</th><th>Avg Words</th><th>Total Responses</th></tr><tr><td>Llama-left</td><td>91.7</td><td>3</td></tr><tr><td>Llama-right</td><td>127.7</td><td>3</td></tr></table>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<h3>Content Analysis</h3><table><tr><th>Model</th><th>Pattern</th><th>Count</th></tr><tr><td>Llama-left</td><td>Questions</td><td>7</td></tr><tr><td>Llama-left</td><td>Agreement</td><td>1</td></tr><tr><td>Llama-left</td><td>Disagreement</td><td>2</td></tr><tr><td>Llama-left</td><td>Emotional</td><td>3</td></tr><tr><td>Llama-right</td><td>Questions</td><td>6</td></tr><tr><td>Llama-right</td><td>Disagreement</td><td>3</td></tr><tr><td>Llama-right</td><td>Agreement</td><td>1</td></tr><tr><td>Llama-right</td><td>Emotional</td><td>1</td></tr></table>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "display(llama_arena.get_debate_summary())\n",
+    "display(llama_arena.get_content_analysis())"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "CSCI5541",
    "language": "python",
    "name": "python3"
   },
@@ -757,7 +998,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.12.5"
   }
  },
  "nbformat": 4,
