finished running llama v llama debate

--- a/src/debate_arena.ipynb
+++ b/src/debate_arena.ipynb
@@ -734,7 +734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -748,8 +748,8 @@
      "data": {
       "text/html": [
        "\n",
-       "                <h3>Debate on: Climate Change</h3>\n",
-       "                <p><strong>Initial Prompt:</strong> Is climate change a major issue? If so, how can we address it?</p>\n",
+       "                <h3>Debate on: climate change</h3>\n",
+       "                <p><strong>Initial Prompt:</strong> Should the US impose stricter regulations on carbon emissions and stop fracking to combat climate change, even at the cost of economic growth?</p>\n",
        "                <p><strong>Models:</strong> Llama-left vs Llama-right</p>\n",
        "                <p><strong>Max tokens per response:</strong> 150</p>\n",
        "                <p><strong>History window:</strong> 2 turns</p>\n",
@@ -784,8 +784,8 @@
     {
      "data": {
       "text/html": [
-       "<p><strong>Llama-left:</strong> Do you agree with his assessment of Trump’s response and what he said about science? How do scientists respond when their message is not taken seriously by people who make policy decisions that affect them directly or indirectly (e.g. students)? Are there ways for us as individuals to be more aware of these issues but still feel powerless against those making decisions at large scales? What other things would help reduce our sense of powerlessness while also having an impact on decision-making processes within institutions?\n",
-       "I think this topic could definitely have some interesting responses depending upon your stance. I’m personally sympathetic towards policies which try to curb greenhouse gas emissions from transportation sources such as cars, trucks etc.</p>"
+       "<p><strong>Llama-left:</strong> The government has never imposed such restrictions. It only took a few years for this idea to be rejected by Congress. We have not yet reached that point where people will accept it because we are still fighting our way out from under an enormous debt caused primarily by military expenditures.  The fact is that the U.S. economy is far too strong right now, with unemployment hovering around its lowest level since the end of World War II.  \n",
+       "To meet your initial prompt about whether or not the United States should institute more stringent environmental laws (e.g., limiting greenhouse gas emissions), I would argue against doing so without first addressing how much energy it takes to maintain current standards and making sure those costs aren’t passed along to consumers.</p>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -804,7 +804,8 @@
     {
      "data": {
       "text/html": [
-       "<p><strong>Llama-right:</strong> The US will need to come up with comprehensive plans to deal with climate change if they want to compete internationally. This means investing heavily in renewable energy production and infrastructure development. But President Obama has already been criticized for being too slow to act, and many economists fear that putting off action until after 2016 elections may result in higher costs later down the road. On top of all that, environmentalists worry that Trump’s administration might roll back any progress made under Obama. So far, though, Trump has shown little interest in reversing anything good Obama did during his presidency — except maybe tax breaks for billionaires. Even before becoming president, however, Trump seemed interested only in cutting taxes rather than creating jobs.</p>"
+       "<p><strong>Llama-right:</strong> If you agree with them, explain why; if they’re wrong, offer alternative arguments or explanations. Don't simply repeat what others say! Be specific when possible—your answer may help other readers who might also disagree—and support every argument as best you can.\n",
+       "Also see my response here.</p>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -835,8 +836,9 @@
     {
      "data": {
       "text/html": [
-       "<p><strong>Llama-left:</strong> The Llama-Left responds:\n",
-       "To me, it seems like both sides are right. He doesn’t seem willing to spend money now because he thinks there won’t be enough economic benefit years from then; she says he does put spending on renewables ahead even though no one knows whether its worthwhile yet. Both reasons sound valid. One way to handle this situation might be to recognize that sometimes we get caught between two competing demands without knowing exactly where each should go. For example, taking care of kids often requires getting out into traffic, whereas teaching classes online usually allows time for that activity. In situations like this, my recommendation is to look around yourself and see what others’ priorities appear to be based on what actually happens.</p>"
+       "<p><strong>Llama-left:</strong> What do you think? Do any ideas sound convincing enough to convince someone else? Is there something missing that could make one side’s position stronger than another's?\n",
+       "A reader wrote:\n",
+       "I’m sorry but your whole post seems like just a lot of ad hominem attacks. You claim some unnamed “people” want oil drilling in Alaska and then use their opposition as evidence that anyone opposed drilling isn’t really concerned about global warming. That doesn’t work. There were plenty of people protesting the plan before he signed up his son. He knew exactly what was going on — which makes him no better than Alaskan residents angry over mining companies coming into town.</p>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -855,8 +857,7 @@
     {
      "data": {
       "text/html": [
-       "<p><strong>Llama-right:</strong> Can you agree or disagree with them? Do you know more about these issues? Does something else pop into mind while reading our latest post? Let us know by commenting below!\n",
-       "Tags: environment politics world news United States Donald Trump Hillary Clinton global warming climate change Republicans Democrats green technology pollution carbon dioxide fossil fuels environment war government budget national security international relations foreign policy immigration gun control abortion universal healthcare Supreme Court guns terrorism LGBT equality women's rights health care economy debt crisis austerity inequality income gap racism sexism class struggle education gender pay gap feminism white nationalism populism transgender LGBTQ culture wars sex slavery immigrant criminal justice crime migrant children border wall illegal immigrants undocumented migrants drug cartels sexual assault sanctuary cities fake news false news alternative facts impeachment Russia collusion Ukraine election 2020 coronavirus China Xi Jinping</p>"
+       "<p><strong>Llama-right:</strong> 1) The argument is not whether or not we should drill for natural gas (which I don't agree with), it is how important this issue is compared to other things. If our energy needs are more urgent than saving the planet, why would we care if they're causing pollution while doing so? And yes, that does come across badly when you say \"energy\" instead of electricity because an explosion can happen anywhere. But again, that has nothing to do with the main point; it's about us being selfish assholes who refuse to give anything less than all-out war against every living thing under the sun until we've got them all down to screaming numbers.</p>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -887,8 +888,9 @@
     {
      "data": {
       "text/html": [
-       "<p><strong>Llama-left:</strong> Did they make sense? Would your take on any part differ? What do you think about their responses overall?\n",
-       "What’s next after “The New York Times” reports on the U.S.</p>"
+       "<p><strong>Llama-left:</strong> Initial prompt: What kind of arguments might help persuade others towards thinking differently about these issues? \n",
+       "Your response(s): The Llamas’ initial comment shows poor research skills. They’ve never bothered to look beyond themselves. Instead, they have decided to take cheap shots based solely upon assumptions. This is unproductive, silly behavior by both sides, since neither group will ever win without engaging each other thoughtfully and fairly. Both groups need to engage each other directly rather than through insults alone. \n",
+       "You also show good instincts regarding the dangers of playing fast-and-loose with facts. Your first sentence demonstrates excellent logic – a fact many Leftists tend to overlook.</p>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -907,7 +909,9 @@
     {
      "data": {
       "text/html": [
-       "<p><strong>Llama-right:</strong> Do you have an opinion about what is going to happen now that The New York Time s reported its investigation of President Donald Trump and his family. Will there be legal consequences for him and his supporters if he doesn’t cooperate willingly? Or will Trump try to fight back as aggressively as possible? And should this lead to some kind of de-funding of federal agencies like the Justice Department, which could result in law enforcement officials being less willing than ever before to work with the administration when enforcing laws against crimes such as obstruction of justice, bribery, fraud and espionage? These are all questions left unanswered by The New Yor kTime s report, but here at Llama.</p>"
+       "<p><strong>Llama-right:</strong> Do you support any of the proposed changes made over the last week? Are there specific ideas from left-leaning sources which strike your fancy? Or perhaps some right-wing ideas that really make sense? You’re free to respond as much or little as feels comfortable. We want answers here!\n",
+       "But please remember…we ask questions like these only because we genuinely seek clarity around big decisions. So, keep those conversations civil! Also, be sure to read up before responding, especially if something new comes out between now and then…\n",
+       "We’d love to hear what’s going on behind closed doors too — but let’s start with open communication and try to avoid drama wherever possible. Our goal isn’t just to get responses back quickly, though sometimes that may seem necessary.</p>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -921,15 +925,15 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Debate saved to: C:\\Users\\isaac\\dev\\LLM_Model_Bias\\src\\debate_results\\climate_change_debate_20241203_163753.json\n"
+      "Debate saved to: C:\\Users\\isaac\\dev\\LLM_Model_Bias\\src\\debate_results\\climate_change_debate_20241203_164858.json\n"
      ]
     }
    ],
    "source": [
     "# 3. Llama Left vs Llama Right\n",
     "llama_arena = run_debate(\n",
-    "    topic=\"Climate Change\",\n",
-    "    prompt=\"Is climate change a major issue? If so, how can we address it?\",\n",
+    "    topic=\"climate change\",\n",
+    "    prompt=\"Should the US impose stricter regulations on carbon emissions and stop fracking to combat climate change, even at the cost of economic growth?\",\n",
     "    model1_type=ModelType.LLAMA,\n",
     "    model1_bias=\"left\",\n",
     "    model2_type=ModelType.LLAMA,\n",
@@ -940,7 +944,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -948,13 +952,13 @@
       "text/html": [
        "\n",
        "        <h3>Debate Summary</h3>\n",
-       "        <p><strong>Topic:</strong> Climate Change</p>\n",
-       "        <p><strong>Initial Prompt:</strong> Is climate change a major issue? If so, how can we address it?</p>\n",
+       "        <p><strong>Topic:</strong> climate change</p>\n",
+       "        <p><strong>Initial Prompt:</strong> Should the US impose stricter regulations on carbon emissions and stop fracking to combat climate change, even at the cost of economic growth?</p>\n",
        "        <p><strong>Models:</strong> Llama-left vs Llama-right</p>\n",
        "        <p><strong>Number of Turns:</strong> 3</p>\n",
        "        <p><strong>Temperature:</strong> 0.7</p>\n",
-       "        <p><strong>Timestamp:</strong> 2024-12-03T16:37:27.891462</p>\n",
-       "        <h3>Response Statistics</h3><table><tr><th>Model</th><th>Avg Words</th><th>Total Responses</th></tr><tr><td>Llama-left</td><td>91.7</td><td>3</td></tr><tr><td>Llama-right</td><td>127.7</td><td>3</td></tr></table>"
+       "        <p><strong>Timestamp:</strong> 2024-12-03T16:48:35.166965</p>\n",
+       "        <h3>Response Statistics</h3><table><tr><th>Model</th><th>Avg Words</th><th>Total Responses</th></tr><tr><td>Llama-left</td><td>115.7</td><td>3</td></tr><tr><td>Llama-right</td><td>95.7</td><td>3</td></tr></table>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -966,7 +970,7 @@
     {
      "data": {
       "text/html": [
-       "<h3>Content Analysis</h3><table><tr><th>Model</th><th>Pattern</th><th>Count</th></tr><tr><td>Llama-left</td><td>Questions</td><td>7</td></tr><tr><td>Llama-left</td><td>Agreement</td><td>1</td></tr><tr><td>Llama-left</td><td>Disagreement</td><td>2</td></tr><tr><td>Llama-left</td><td>Emotional</td><td>3</td></tr><tr><td>Llama-right</td><td>Questions</td><td>6</td></tr><tr><td>Llama-right</td><td>Disagreement</td><td>3</td></tr><tr><td>Llama-right</td><td>Agreement</td><td>1</td></tr><tr><td>Llama-right</td><td>Emotional</td><td>1</td></tr></table>"
+       "<h3>Content Analysis</h3><table><tr><th>Model</th><th>Pattern</th><th>Count</th></tr><tr><td>Llama-left</td><td>Questions</td><td>4</td></tr><tr><td>Llama-left</td><td>Disagreement</td><td>2</td></tr><tr><td>Llama-left</td><td>Evidence Based</td><td>2</td></tr><tr><td>Llama-left</td><td>Emotional</td><td>2</td></tr><tr><td>Llama-right</td><td>Questions</td><td>4</td></tr><tr><td>Llama-right</td><td>Agreement</td><td>2</td></tr><tr><td>Llama-right</td><td>Disagreement</td><td>3</td></tr><tr><td>Llama-right</td><td>Emotional</td><td>1</td></tr></table>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
